Changed Axion to HSQLDB and updated each test to use own database